added finetuned params

--- a/co2emissions/basic_framework.ipynb
+++ b/co2emissions/basic_framework.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import xgboost as xgb\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -19,7 +21,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_emissions_statistics = {\n",
+    "    'total_scope1': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 3.37,\n",
+    "        'median': 0.08,\n",
+    "        'std_deviation': 13.59,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'total_scope2': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 0.79,\n",
+    "        'median': 0.14,\n",
+    "        'std_deviation': 3.42,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'total_scope3': {\n",
+    "        'num_observations': 8260,\n",
+    "        'mean': 13.33,\n",
+    "        'median': 0.05,\n",
+    "        'std_deviation': 65.60,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'total_emissions': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 4.16,\n",
+    "        'median': 0.30,\n",
+    "        'std_deviation': 14.88,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "target_feature_statistics = {\n",
+    "    'revenue': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 16988.08,\n",
+    "        'median': 5891.07,\n",
+    "        'std_deviation': 34207.83,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'employees': {\n",
+    "        'num_observations': 12821,\n",
+    "        'mean': 42745.57,\n",
+    "        'median': 16702,\n",
+    "        'std_deviation': 83232,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'total_assets': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 47182.20,\n",
+    "        'median': 10390.12,\n",
+    "        'std_deviation': 111607.80,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'net_property': {\n",
+    "        'num_observations': 13843,\n",
+    "        'mean': 7213.24,\n",
+    "        'median': 1806,\n",
+    "        'std_deviation': 17946.58,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'intangible_assets': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 2635.44,\n",
+    "        'median': 401.07,\n",
+    "        'std_deviation': 7623.83,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'leverage': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 20.84,\n",
+    "        'median': 18.07,\n",
+    "        'std_deviation': 19.32,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'capital_expenditure': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 64.22,\n",
+    "        'median': 27.20,\n",
+    "        'std_deviation': 153.47,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'gross_margin': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 49.90,\n",
+    "        'median': 43.69,\n",
+    "        'std_deviation': 29.49,\n",
+    "        'jqbera_p_value': 0.001\n",
+    "    },\n",
+    "    'fuel_intensity': {\n",
+    "        'num_observations': 13956,\n",
+    "        'mean': 429.18,\n",
+    "        'median': 456,\n",
+    "        'std_deviation': 223.45,\n",
+    "        'jqbera_p_value': 0.020\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "xgb_parameters = {\n",
+    "    'scope1': {\n",
+    "        \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
