fixed model params

--- a/co2emissions/model_config.ipynb
+++ b/co2emissions/model_config.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +40,10 @@
        " 'colsample_bytree': 0.5,\n",
        " 'objective': 'reg:linear',\n",
        " 'eval_metric': 'mae',\n",
-       " 'colsample': 1.0,\n",
-       " 'n_estimator': 1000,\n",
        " 'n_estimators': 131}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,12 +55,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "XGB_scope1_model = xgb.XGBRegressor(**XGB_scope1_params, seed=SEED, random_state=SEED)\n",
-    "pickle.dump(XGB_scope1_model, open(\"models/XGB_scope1_model.p\",\"wb\"))"
+    "pickle.dump(XGB_scope1_model, open(\"model_parameters/XGB_scope1_params.p\",\"wb\"))"
    ]
   },
   {
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +83,12 @@
        " 'eta': 0.01,\n",
        " 'subsample': 0.9,\n",
        " 'colsample_bytree': 0.5,\n",
-       " 'objective': 'reg:linear',\n",
+       " 'objective': 'reg:squarederror',\n",
        " 'eval_metric': 'mae',\n",
-       " 'colsample': 0.8,\n",
-       " 'n_estimator': 999,\n",
        " 'n_estimators': 170}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -132,14 +128,12 @@
        " 'eta': 0.01,\n",
        " 'subsample': 0.8,\n",
        " 'colsample_bytree': 0.5,\n",
-       " 'objective': 'reg:linear',\n",
+       " 'objective': 'reg:squarederror',\n",
        " 'eval_metric': 'mae',\n",
-       " 'colsample': 0.7,\n",
-       " 'n_estimator': 100,\n",
        " 'n_estimators': 242}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
