add macro/industry trends + modified dir structure

--- a/co2emissions/src/model_config.ipynb
+++ b/co2emissions/src/model_config.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,29 +38,29 @@
        " 'eta': 0.01,\n",
        " 'subsample': 0.8,\n",
        " 'colsample_bytree': 0.5,\n",
-       " 'objective': 'reg:linear',\n",
+       " 'objective': 'reg:squarederror',\n",
        " 'eval_metric': 'mae',\n",
        " 'n_estimators': 131}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "XGB_scope1_params = pickle.load(open(\"model_parameters/XGB_scope1_params.p\",\"rb\"))\n",
+    "XGB_scope1_params = pickle.load(open(\"../model_parameters/XGB_scope1_params.p\",\"rb\"))\n",
     "XGB_scope1_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "XGB_scope1_model = xgb.XGBRegressor(**XGB_scope1_params, seed=SEED, random_state=SEED)\n",
-    "pickle.dump(XGB_scope1_model, open(\"model_parameters/XGB_scope1_params.p\",\"wb\"))"
+    "pickle.dump(XGB_scope1_model, open(\"../models/XGB_scope1_model.p\",\"wb\"))"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -88,13 +88,13 @@
        " 'n_estimators': 170}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "XGB_scope2_params = pickle.load(open(\"model_parameters/XGB_scope2_params.p\",\"rb\"))\n",
+    "XGB_scope2_params = pickle.load(open(\"../model_parameters/XGB_scope2_params.p\",\"rb\"))\n",
     "XGB_scope2_params"
    ]
   },
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "XGB_scope2_model = xgb.XGBRegressor(**XGB_scope2_params, seed=SEED, random_state=SEED)\n",
-    "pickle.dump(XGB_scope2_model, open(\"models/XGB_scope2_model.p\",\"wb\"))"
+    "pickle.dump(XGB_scope2_model, open(\"../models/XGB_scope2_model.p\",\"wb\"))"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,13 +133,13 @@
        " 'n_estimators': 242}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "XGB_total_emissions_params = pickle.load(open(\"model_parameters/XGB_total_emissions_params.p\",\"rb\"))\n",
+    "XGB_total_emissions_params = pickle.load(open(\"../model_parameters/XGB_total_emissions_params.p\",\"rb\"))\n",
     "XGB_total_emissions_params"
    ]
   },
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "XGB_total_emissions_model = xgb.XGBRegressor(**XGB_total_emissions_params, seed=SEED, random_state=SEED)\n",
-    "pickle.dump(XGB_total_emissions_model, open(\"models/XGB_total_emissions_model.p\",\"wb\"))"
+    "pickle.dump(XGB_total_emissions_model, open(\"../models/XGB_total_emissions_model.p\",\"wb\"))"
    ]
   }
  ],
