--- a/co2emissions/src/basic_framework.ipynb
+++ b/co2emissions/src/basic_framework.ipynb
@@ -56,21 +56,6 @@
     "            return 'total_emissions'\n",
     "\n",
     "\n",
-    "def apply_legislative_impacts(year):\n",
-    "    policy_years = {\n",
-    "        2021: 0.95,  # Initial phase of Bipartisan Infrastructure Law\n",
-    "        2023: 0.90,  # Phase in of Senate Inflation Reduction Act\n",
-    "        2026: 0.85   # Full impact of House Build Back Better Act\n",
-    "    }\n",
-    "    # Find the latest applicable factor based on the year\n",
-    "    applicable_factor = 1.0  # default factor before any policy\n",
-    "    for policy_year, factor in sorted(policy_years.items(), reverse=True):\n",
-    "        if year >= policy_year:\n",
-    "            applicable_factor = factor\n",
-    "            break\n",
-    "    return applicable_factor\n",
-    "\n",
-    "\n",
     "class EmissionsForecaster:\n",
     "    def __init__(self, num_years_forecast=6, growth_mean=0.3, growth_std=0.5):\n",
     "        self.num_years_forecast = num_years_forecast\n",
@@ -89,7 +74,7 @@
     "            future_values = [last_year_value]\n",
     "            for idx, growth_rate in enumerate(growth_rates):\n",
     "                year = 2023 + idx\n",
-    "                legislative_impact = apply_legislative_impacts(year)\n",
+    "                legislative_impact = self._apply_legislative_impacts(year)\n",
     "                future_value = future_values[-1] * (1 + growth_rate) * legislative_impact\n",
     "                future_values.append(future_value)\n",
     "            future_data[data_type] = future_values[1:]\n",
@@ -122,6 +107,21 @@
     "            emissions *= factor ** (year_index - 2023)\n",
     "            predicted_emissions.append(emissions[0])\n",
     "        return predicted_emissions\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _apply_legislative_impacts(year):\n",
+    "        policy_years = {\n",
+    "            2021: 0.95,  # Initial phase of Bipartisan Infrastructure Law\n",
+    "            2023: 0.90,  # Phase in of Senate Inflation Reduction Act\n",
+    "            2026: 0.85   # Full impact of House Build Back Better Act\n",
+    "        }\n",
+    "        # Find the latest applicable factor based on the year\n",
+    "        applicable_factor = 1.0  # default factor before any policy\n",
+    "        for policy_year, factor in sorted(policy_years.items(), reverse=True):\n",
+    "            if year >= policy_year:\n",
+    "                applicable_factor = factor\n",
+    "                break\n",
+    "        return applicable_factor\n",
     "\n",
     "\n",
     "class PlotManager:\n",
