added data sets & docstrings

--- a/co2emissions/src/basic_framework.ipynb
+++ b/co2emissions/src/basic_framework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ModelManager:\n",
-    "    \"\"\"Manages training and storage of machine learning models.\"\"\"\n",
-    "    def __init__(self, base_path='../models/'):\n",
+    "    def __init__(self, base_path: str = '../models/'):\n",
     "        self.base_path = base_path\n",
     "\n",
-    "    def train_models(self, df, feature_col, target_cols, scope, model='XGB'):\n",
+    "    def train_models(self, df: pd.DataFrame, feature_col: str, target_cols: list, scope: str, model: str = 'XGB') -> dict:\n",
+    "        \"\"\" Loads in model for the specified feature column and fit over training data. \"\"\"\n",
     "        scope_pathname = self._get_scope_pathname(scope)\n",
     "        path = f\"{self.base_path}{model}_{scope_pathname}_model.p\"\n",
     "        fitted_models = {}\n",
@@ -47,7 +47,8 @@
     "        return fitted_models\n",
     "\n",
     "    @staticmethod\n",
-    "    def _get_scope_pathname(scope):\n",
+    "    def _get_scope_pathname(scope: str) -> str:\n",
+    "        \"\"\" Determines the file path suffix based on the emission scope. \"\"\"\n",
     "        if scope == 'Scope 1':\n",
     "            return 'scope1'\n",
     "        elif scope == 'Scope 2':\n",
@@ -57,17 +58,20 @@
     "\n",
     "\n",
     "class EmissionsForecaster:\n",
-    "    def __init__(self, num_years_forecast=6, growth_mean=0.3, growth_std=0.5):\n",
+    "    \"\"\" Forecasts future emissions based on trained models and trends. \"\"\"\n",
+    "    def __init__(self, num_years_forecast: int = 6, growth_mean: float = 0.3, growth_std: float = 0.5):\n",
     "        self.num_years_forecast = num_years_forecast\n",
     "        self.growth_mean = growth_mean\n",
     "        self.growth_std = growth_std\n",
     "\n",
-    "    def forecast_emissions(self, models, last_year_data):\n",
+    "    def forecast_emissions(self, models: dict, last_year_data: dict):\n",
+    "        \"\"\" Produces a forecast of emissions for the specified number of future years. \"\"\"\n",
     "        future_data = self.apply_macro_trends(last_year_data)\n",
-    "        processed_data = self.apply_emissions_trends(models, future_data)\n",
+    "        processed_data = self.model_predict(models, future_data)\n",
     "        return pd.DataFrame(processed_data, index=np.arange(2023, 2023 + self.num_years_forecast))\n",
     "\n",
-    "    def apply_macro_trends(self, last_year_data):\n",
+    "    def apply_macro_trends(self, last_year_data: dict) -> dict:\n",
+    "        \"\"\" Applies macro trends to the last year's data to forecast future data points. \"\"\"\n",
     "        future_data = {}\n",
     "        for data_type, last_year_value in last_year_data.items():\n",
     "            growth_rates = np.random.normal(loc=self.growth_mean, scale=self.growth_std, size=self.num_years_forecast)\n",
@@ -80,36 +84,39 @@
     "            future_data[data_type] = future_values[1:]\n",
     "        return future_data\n",
     "\n",
-    "    def apply_emissions_trends(self, models, future_data):\n",
+    "    def model_predict(self, models: dict, future_data: dict) -> dict:\n",
+    "        \"\"\" Applies emissions-specific models to forecast data. \"\"\"\n",
     "        df_future_data = pd.DataFrame(future_data, index=np.arange(2023, 2023 + self.num_years_forecast))\n",
     "        emissions_data = {}\n",
     "        for emission_type, model in models.items():\n",
-    "            predicted_emissions = self.apply_specific_factors(emission_type, model, df_future_data)\n",
+    "            predicted_emissions = []\n",
+    "            for year_index, row in df_future_data.iterrows():\n",
+    "                inputs = row.values.reshape(1, -1)\n",
+    "                emissions = model.predict(inputs)\n",
+    "                emissions = self.apply_sector_trends(emissions, emission_type, year_index)\n",
+    "                predicted_emissions.append(emissions)\n",
     "            emissions_data[emission_type] = predicted_emissions\n",
     "        return emissions_data\n",
-    "\n",
-    "    def apply_specific_factors(self, emission_type, model, df_future_data):\n",
-    "        predicted_emissions = []\n",
-    "        for year_index, row in df_future_data.iterrows():\n",
-    "            inputs = row.values.reshape(1, -1)\n",
-    "            emissions = model.predict(inputs)\n",
-    "            factor = 1\n",
-    "            if emission_type == 'electricity':\n",
-    "                factor = 0.93\n",
-    "            elif emission_type == 'mobile_sources':\n",
-    "                factor = 1.1\n",
-    "            elif emission_type == 'business_travel':\n",
-    "                factor = 0.95\n",
-    "            elif emission_type == 'commuting':\n",
-    "                factor = 0.90\n",
-    "            elif emission_type == 'waste':\n",
-    "                factor = 1.1 \n",
-    "            emissions *= factor ** (year_index - 2023)\n",
-    "            predicted_emissions.append(emissions[0])\n",
-    "        return predicted_emissions\n",
+    "    \n",
+    "    def apply_sector_trends(self, emissions: float, emission_type: str, year_index: int) -> float:\n",
+    "        \"\"\"  Adjusts predictions based on projected emission-level trends. \"\"\"\n",
+    "        factor = 1\n",
+    "        if emission_type == 'electricity':\n",
+    "            factor = 0.93\n",
+    "        elif emission_type == 'mobile_sources':\n",
+    "            factor = 1.1\n",
+    "        elif emission_type == 'business_travel':\n",
+    "            factor = 0.95\n",
+    "        elif emission_type == 'commuting':\n",
+    "            factor = 0.90\n",
+    "        elif emission_type == 'waste':\n",
+    "            factor = 1.1 \n",
+    "        emissions *= factor ** (year_index - 2023)\n",
+    "        return emissions[0]\n",
     "    \n",
     "    @staticmethod\n",
-    "    def _apply_legislative_impacts(year):\n",
+    "    def _apply_legislative_impacts(year: int) -> float:\n",
+    "        \"\"\" Adjusts forecasts based on anticipated legislative impacts specific to each year. \"\"\"\n",
     "        policy_years = {\n",
     "            2021: 0.95,  # Initial phase of Bipartisan Infrastructure Law\n",
     "            2023: 0.90,  # Phase in of Senate Inflation Reduction Act\n",
@@ -125,7 +132,8 @@
     "\n",
     "\n",
     "class PlotManager:\n",
-    "    def plot_scope_forecast(self, df, scope, model_name='Gradient Boosting'):\n",
+    "    def plot_scope_forecast(self, df: pd.DataFrame, scope: str, model_name='Gradient Boosting') -> None:\n",
+    "        \"\"\" Plots the forecasted emissions data with an area stackplot. \"\"\"\n",
     "        plt.style.use(['unhcrpyplotstyle', 'area'])  # Optional: custom matplotlib styling i found\n",
     "        x = df.index\n",
     "        fig, ax = plt.subplots()\n",
@@ -133,8 +141,8 @@
     "        self.draw_vert_line(ax)  # Draw the x-axis line indicating start of predictions\n",
     "        self.plot_legend(ax, df)  # Plot the legend\n",
     "        self.plot_titles(ax, scope)  # Set plot title/labels\n",
-    "        self.add_caption(x, model_name)  # Add caption\n",
-    "        self.add_annotations(ax, x) \n",
+    "        self.add_caption(x, model_name)  # Add caption at bottom\n",
+    "        self.add_annotations(ax)  # Add text & arrows to graph\n",
     "        fig.tight_layout()\n",
     "        plt.savefig(f\"../output_graphs/{model_name}_{scope}_graph\".replace(' ', '_'))\n",
     "        plt.show()\n",
@@ -154,15 +162,17 @@
     "                     alpha=0.8)\n",
     "\n",
     "    def draw_vert_line(self, ax):\n",
+    "        \"\"\" Draws dotted vertical line indicating the start of predictions. \"\"\"\n",
     "        ax.axvline(x=2024, \n",
     "                   color='black', \n",
     "                   linestyle='--')\n",
     "        \n",
-    "    def format_legend_labels(self, columns):\n",
+    "    def format_legend_labels(self, columns: list) -> list:\n",
     "        \"\"\"Format legend labels to look more readable/cleaner.\"\"\"\n",
     "        return [col.replace('_', ' ').capitalize() for col in columns]\n",
     "\n",
     "    def plot_legend(self, ax, df):\n",
+    "        \"\"\" Adds a legend & dynamically adjusts the number of columns. \"\"\"\n",
     "        if len(df.columns) <= 4:\n",
     "            num_cols = len(df.columns)\n",
     "        else:\n",
@@ -170,10 +180,12 @@
     "        ax.legend(loc=(0, 1.05), ncol=num_cols)\n",
     "\n",
     "    def plot_titles(self, ax, scope):\n",
+    "        \"\"\" Sets the title and labels for the plot. \"\"\"\n",
     "        ax.set_title(f'Forecast of {scope} Emissions for the Next 5 Years', pad=50)\n",
     "        ax.set_ylabel('Emissions (MT CO2e)')\n",
     "\n",
-    "    def add_annotations(self, ax, x):\n",
+    "    def add_annotations(self, ax):\n",
+    "        \"\"\" Adds text annotations and arrows to plot. \"\"\"\n",
     "        prediction_start_year = 2024\n",
     "        y_pos = ax.get_ylim()[1] * 0.1\n",
     "        text_properties = {'xycoords': 'data', 'textcoords': 'offset points', 'va': 'center', 'color': 'black'}\n",
@@ -191,7 +203,7 @@
     "                    arrowprops=dict(arrowstyle=\"->\", color='black'), ha='center', **text_properties)\n",
     "\n",
     "    def add_caption(self, x, model_name):\n",
-    "        # plt.ylim(0, 900)\n",
+    "        \"\"\" Adds caption at the bottom of the figure. \"\"\"\n",
     "        plt.xticks(x,x)\n",
     "        plt.annotate(f\"Forecast based on {model_name} Model\", \n",
     "                     (0,0), \n",
@@ -205,8 +217,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Assumptions:**\n",
+    "- Assuming that we will only have access to a single years worth of GHG emissons data (granulated at the year level)\n",
+    "- Assuming that we will eventually have access to multiple years worth of past business data such as revenue, number of employees, assets, etc\n",
+    "\n",
+    "\n",
+    "**Outline:**\n",
+    "1. Generate synthetic training data for the past 5 years of related business data (revenue, number of employees, assets, etc.).\n",
+    "2. Train a separate time series/statistical model for each variable on the synthetic data set.\n",
+    "3. Create a forecast/projection for each variable until 2030. \n",
+    "4. Generate another synthetic training data set with business factors as predictors and GHG emissions as the target variables. \n",
+    "5. Train a separate XGB model for each GHG emission.\n",
+    "6. Predict the GHG emissions using the forecasted business values.\n",
+    "7. Incorporate macro-level trends (i.e., climate bills) and projections (i.e., projected $CO_2$ emissions by sector/industry)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
